fix layout bugs in home

--- a/app/components/HomeContent/homeContent.module.scss
+++ b/app/components/HomeContent/homeContent.module.scss
@@ -156,7 +156,7 @@
       height: calc(55vh - 20px);
     }
 
-    @media (min-height: 1300px) {
+    @media (min-height: 1317px) {
       height: calc(64vh - 20px);
     }
 
